--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "json-server": "^1.0.0-beta.3",
-    "package.json": "^2.0.1"
+    "package.json": "^2.0.1",
+    "react-router-dom": "^7.5.3"
   }
 }
